# husker

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  dockerfile
assets/: main.css
server/: db_utils.rs
src/: main.rs
