[package]
name = "husker"
version = "0.1.0"
authors = ["Ramazan G. <codmyhesap@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.2", features = ["router", "fullstack"] }
dioxus-liveview = "0.6.1"
serde = { version = "1.0", features = ["derive"], optional=false }
dioxus-ssr = { version = "0.6.0-rc.0" }
dioxus-fullstack= { version = "0.6.2" }
dioxus-isrg = { version = "0.6.0-rc.0" }
dotenv = "0.15"
mongodb = {version="3.1.0", optional = true }
futures = { version = "0.3.30", optional = true }
[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server=["dioxus/server","dep:mongodb","dep:futures"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
